--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 #token for auth
-JWT_SECRET=******************
+JWT_SECRET=osama$123654$
 
 #database
-DATABASE=*******************************
+DATABASE=mongodb+srv://OsamaSayed:Osamaweezy99@cluster0.hukwbs4.mongodb.net/?retryWrites=true&w=majority
 #cloudinary
-CLOUD_NAME=*****************
-API_KEY=*********************
-API_SECRET=*****************************
+CLOUD_NAME=dnkxxihsa
+API_KEY=683464694195184
+API_SECRET=VJzCKF_6fshParn5FQ5BhyKscog
 
 
 
